# TextSim-Analyzer

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: build.yml
data/: RECORTE_SIMILARIDADE_A1_EXT_EXT_E1.csv  RECORTE_SIMILARIDADE_A2_EXT_EXT_E1.csv  test1.csv
src/: main.py  streamlit_ui.py  tkinter_ui.py
src/modules/: compare_data.py  database.py
