[project]
name = "textsim-analyzer"
version = "0.1.0"
description = ""
authors = [
    {name = "romulolass",email = "romulolassoares@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb (>=1.1.3,<2.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "jellyfish (>=1.1.3,<2.0.0)",
    "rapidfuzz (>=3.12.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
